# compiled_knowledge

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  build_docs.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
docs/: 00_front_matter.md  02_background.ipynb  03_PGM_basics.ipynb  04_PGM_advanced.ipynb  05_example_PGMs.ipynb  06_circuits_and_programs.ipynb  07_PGM_compilers_advanced.ipynb  08_circuit_compilers_advanced.ipynb  09_sampling.ipynb  0_00_exec_summary.md  0_front_matter.ipynb  0_front_matter.md  0_front_matter_template.md  1_01_front_matter.md  1_01_front_matter_template.md  1_02_introduction.ipynb  1_03_installation.ipynb  1_04_developer_community.ipynb  1_introduction.ipynb  2_01_background.ipynb  2_02_PGM_basics.ipynb  2_03_PGM_advanced.ipynb  2_04_example_PGMs.ipynb  2_05_circuits_and_programs.ipynb  2_06_PGM_compilers_advanced.ipynb  2_07_circuit_compilers_advanced.ipynb  2_08_sampling.ipynb  2_09_datasets.ipynb  2_10_machine_learning.ipynb  2_background.ipynb  3_PGM_basics.ipynb  4_PGM_advanced.ipynb  5_example_PGMs.ipynb  6_circuits_and_programs.ipynb  7_PGM_compilers_advanced.ipynb  8_circuit_compilers_advanced.ipynb  9_sampling.ipynb  _config.yml  _toc.yml  api_index.rst  (+1 more)
docs/api/: ck.circuit.rst  ck.circuit_compiler.cython_vm_compiler.rst  ck.circuit_compiler.rst  ck.circuit_compiler.support.circuit_analyser.rst  ck.circuit_compiler.support.rst  ck.dataset.rst  ck.example.rst  ck.in_out.rst  ck.learning.rst  ck.pgm_circuit.rst  ck.pgm_circuit.support.rst  ck.pgm_compiler.ace.rst  ck.pgm_compiler.rst  ck.pgm_compiler.support.circuit_table.rst  ck.pgm_compiler.support.rst  ck.probability.rst  ck.program.rst  ck.rst  ck.sampling.rst  ck.utils.rst  conf.py  index.rst  modules.rst
src/ck/: pgm.py
src/ck/circuit/: .gitignore  (+9 more)
src/ck_demos/: all_demos.py
tests/: all_coverage.py  all_coveragerc.txt  all_tests.py  circuit_test.py  pgm_test.py
tests/circuit/: circuit_test.py
tests/circuit_compiler/: cvm_compiler_test.py  input_vars_test.py  interpret_compiler_test.py  llvm_compiler_test.py  llvm_vm_compiler_test.py
tests/dataset/: cross_table_probabilities_test.py  cross_table_test.py  dataset_builder_test.py  dataset_compute_test.py  dataset_from_cross_table_test.py  dataset_from_csv_test.py  dataset_test.py
tests/example/: example_test.py
tests/helpers/: circuit_compiler_test_cases.py  pgm_test_cases.py  redirect_out.py  sampling_fixture.py  string_extras.py  unittest_fixture.py
tests/in_out/: nnf_parser_test.py  parse_lmap_test.py  parse_net_test.py  pgm_pickle_test.py  pgm_python_test.py  render_net_test.py
tests/learning/: coalesce_cross_tables_test.py  condition_cross_table_test.py  conditioned_cross_table_test.py  model_from_cross_tables_test.py  train_generative_test.py
tests/pgm/: pgm_test.py
tests/pgm_circuit/: marginals_program_test.py  mpe_program_test.py  pgm_circuit_test.py  program_with_slotmap_test.py  target_marginals_program_test.py  wmc_program_test.py
tests/pgm_compiler/: ace_test.py  factor_elimination_test.py  recursive_conditioning_test.py  variable_elimination_test.py
tests/probability/: cross_table_probability_space_test.py  divergance_test.py  empirical_probability_space_test.py  pgm_probability_space_test.py  probability_space_test.py
tests/program/: program_buffer_test.py  program_test.py
tests/sampling/: marginals_direct_sampler_test.py  marginals_samplers_test.py  sampler_support_test.py  sampler_test.py  uniform_sampler_test.py  wmc_direct_sampler_test.py  wmc_samplers_test.py
(+186 files in other folders)
